--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -2,6 +2,24 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID =postgres;Password=nevermind;Server=localhost;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;"
   },
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    },
+    "Clients": [
+      {
+        "Enabled": true,
+        "ClientId": "local-dev",
+        "ClientName": "Local Development",
+        "ClientSecrets": [ { "value": "yo" } ],
+        "AllowedGrantTypes": [ "client_credentials" ],
+        "AllowedScopes": [ "api1" ],
+        "Profile": "IdentityServerSPA",
+        "RequireClientSecret" :false ,
+        "RequirePkce":true
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
