identityserver fix, seed  fix, context designer fix

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -12,18 +12,26 @@
         "ClientId": "local-dev",
         "ClientName": "Local Development",
         "ClientSecrets": [ { "value": "yo" } ],
-        "AllowedGrantTypes": [ "client_credentials" ],
-        "AllowedScopes": [ "api1" ],
+        "AllowedGrantTypes": [ "client_credentials", "password" ],
+        "AllowedScopes": [ "admin-resource", "openid", "profile" ],
         "Profile": "IdentityServerSPA",
-        "RequireClientSecret" :false ,
-        "RequirePkce":true
+        "RequireClientSecret": false,
+        "RequirePkce": true
+      }
+    ],
+    "ApiResources": [
+      {
+        "Name": "admin-resource",
+        "DisplayName": "Admin Resource",
+        "Description": "API for admin-related operations",
       }
     ]
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Duende.IdentityServer": "Trace"
     }
   },
   "AllowedHosts": "*"
