wip identity server impl

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -19,11 +19,21 @@
         "RequirePkce": true
       }
     ],
+    "ApiScopes": [
+      {
+        "Name": "role",
+        "UserClaims": [ "role" ]
+      },
+      {
+        "Name": "email",
+        "UserClaims": [ "email" ]
+      }
+    ],
     "ApiResources": [
       {
         "Name": "admin-resource",
         "DisplayName": "Admin Resource",
-        "Description": "API for admin-related operations",
+        "Scopes": ["admin-resource"]
       }
     ]
   },
