functioning role authorization

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -13,7 +13,7 @@
         "ClientName": "Local Development",
         "ClientSecrets": [ { "value": "yo" } ],
         "AllowedGrantTypes": [ "client_credentials", "password" ],
-        "AllowedScopes": [ "admin-resource", "openid", "profile" ],
+        "AllowedScopes": [ "openid", "profile", "role", "email" ],
         "Profile": "IdentityServerSPA",
         "RequireClientSecret": false,
         "RequirePkce": true
