--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -33,9 +33,12 @@
       {
         "Name": "admin-resource",
         "DisplayName": "Admin Resource",
-        "Scopes": ["admin-resource"]
+        "Scopes": [ "admin-resource" ]
       }
     ]
+  },
+  "FileManagment": {
+    "Root": ""
   },
   "Logging": {
     "LogLevel": {
