WIP active order

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AntiVirusScanner" Version="1.0.2" />
+    <PackageReference Include="Cloudmersive.APIClient.NETCore.VirusScan" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
