--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -2,9 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID =postgres;Password=nevermind;Server=localhost;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;Include Error Detail=true"
   },
-  "Cloudmersive": {
-    "ApiKey": "8c6027b2-7bef-487d-977f-f22fb2e14579"
-  },
   "IdentityServer": {
     "Key": {
       "Type": "Development"
@@ -40,8 +37,9 @@
       }
     ]
   },
-  "FileManagment": {
-    "Root": ""
+  "FileSettings": {
+    "Root": "",
+    "CloudmersiveApiKey": "8c6027b2-7bef-487d-977f-f22fb2e14579"
   },
   "Logging": {
     "LogLevel": {
