file upload fix

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -38,7 +38,7 @@
     ]
   },
   "FileSettings": {
-    "Root": "",
+    "Root": "D:\\work\\FileStorage",
     "CloudmersiveApiKey": "8c6027b2-7bef-487d-977f-f22fb2e14579"
   },
   "Logging": {
