--- a/Tests/Core.Tests/Core.Tests.csproj
+++ b/Tests/Core.Tests/Core.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestHelpers\TestHelpers.csproj" />
+  </ItemGroup>
+
 </Project>
