wip userdocument image fix

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID =postgres;Password=nevermind;Server=localhost;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;Include Error Detail=true"
+    "DefaultConnection": "User ID =postgres;Password=nevermind;Server=localhost;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;Include Error Detail=true",
+    "TestConnection": "User ID =postgres;Password=nevermind;Server=localhost;Port=5432;Database=yoDb;Integrated Security=true;Pooling=true;Include Error Detail=true"
   },
   "IdentityServer": {
     "Key": {
@@ -38,7 +39,7 @@
     ]
   },
   "FileSettings": {
-    "Root": "C:\\vilem\\work\\test\\StoragetTest",
+    "Root": "D:\\work\\FileStorage",
     "CloudmersiveApiKey": "8c6027b2-7bef-487d-977f-f22fb2e14579"
   },
   "Logging": {
