--- a/Tests/DataLayer.Tests'/DataLayer.Tests.csproj
+++ b/Tests/DataLayer.Tests'/DataLayer.Tests.csproj
@@ -31,4 +31,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestHelpers\TestHelpers.csproj" />
+  </ItemGroup>
+
 </Project>
