--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -39,7 +39,7 @@
     ]
   },
   "FileSettings": {
-    "Root": "D:\\work\\FileStorage",
+    "Root": "C:\\vilem\\work\\test\\StoragetTest",
     "CloudmersiveApiKey": "8c6027b2-7bef-487d-977f-f22fb2e14579"
   },
   "Logging": {
