--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AntiVirusScanner" Version="1.0.2" />
     <PackageReference Include="Cloudmersive.APIClient.NETCore.VirusScan" Version="2.1.4" />
+    <PackageReference Include="Stripe.net" Version="41.12.0" />
   </ItemGroup>
 
   <ItemGroup>
