add cors + test endpoints

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -12,6 +12,7 @@
         "Enabled": true,
         "ClientId": "local-dev",
         "ClientName": "Local Development",
+        "AllowedCorsOrigins": [  "http://localhost:5173" ],
         "ClientSecrets": [ { "value": "yo" } ],
         "AllowedGrantTypes": [ "client_credentials", "password" ],
         "AllowedScopes": [ "openid", "profile", "role", "email" ],
