--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AntiVirusScanner" Version="1.0.2" />
-    <PackageReference Include="Cloudmersive.APIClient.NETCore.VirusScan" Version="2.1.4" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
+    <PackageReference Include="Azure.Storage.Common" Version="12.15.0" />
     <PackageReference Include="Stripe.net" Version="41.12.0" />
   </ItemGroup>
 
