--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Azure.Storage.Common" Version="12.15.0" />
+    <PackageReference Include="MailKit" Version="4.0.0" />
     <PackageReference Include="Stripe.net" Version="41.12.0" />
   </ItemGroup>
 
