external login WIP

--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -12,7 +12,7 @@
         "Enabled": true,
         "ClientId": "local-dev",
         "ClientName": "Local Development",
-        "AllowedCorsOrigins": [ "http://localhost:5173" ],
+        "AllowedCorsOrigins": [ "http://localhost:5173", "https://5b06-2a02-8308-7093-5f00-194d-96d8-51f2-fb7c.ngrok-free.app" ],
         "ClientSecrets": [ { "value": "yo" } ],
         "AllowedGrantTypes": [ "client_credentials", "password" ],
         "AllowedScopes": [ "openid", "profile", "role", "email" ],
@@ -38,6 +38,12 @@
         "Scopes": [ "admin-resource" ]
       }
     ]
+  },
+  "ExternalAuthenticationProviders": {
+    "Google": {
+      "ClientId": "638651973440-g4nat8q1qbv51qqko209i3ihpbiatk40.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   },
   "AzureStorageConfig": {
     "AccountName": "carrentalblobstorage",
