--- a/CarRentalAPI/appsettings.json
+++ b/CarRentalAPI/appsettings.json
@@ -40,10 +40,8 @@
     ]
   },
   "ExternalAuthenticationProviders": {
-    "Google": {
-      "ClientId": "638651973440-g4nat8q1qbv51qqko209i3ihpbiatk40.apps.googleusercontent.com",
-      "ClientSecret": "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"
-    }
+    "GoogleClientId": "638651973440-g4nat8q1qbv51qqko209i3ihpbiatk40.apps.googleusercontent.com",
+    "GoogleClientSecret": "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"
   },
   "AzureStorageConfig": {
     "AccountName": "carrentalblobstorage",
