--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Azure.Storage.Common" Version="12.15.0" />
+    <PackageReference Include="Duende.BFF" Version="2.0.0" />
+    <PackageReference Include="Duende.BFF.Yarp" Version="2.0.0" />
     <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.5.0" />
     <PackageReference Include="MailKit" Version="4.0.0" />
